<resources>
    <string name="app_name">E-Learning</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">LOGIN</string>
    <string name="home">Home</string>
    <string name="user">Student</string>
    <string name="question">Question</string>
    <string name="profile">Profil</string>
    <string name="announce">Pengumuman!!!</string>
    <string name="nama">Nama</string>
    <string name="tambah_siswa">Tambah Siswa</string>
    <string name="read_more">read more...</string>
    <string name="date">tanggal</string>
    <string name="tambah">Tambah</string>
    <string name="tambah_soal">Tambah Soal</string>
    <string name="judul">Judul</string>
    <string name="mulai">Mulai</string>
    <string name="selesai">Selesai</string>
    <string name="soal">Soal</string>
    <string name="buat_soal">Buat Soal</string>
    <string name="buat">Buat</string>
    <string name="tv_soal">Soal : </string>
    <string name="tempo_pengerjaan">Tempo Pengerjaan : </string>
    <string name="kerjakan">Kerjakan</string>
    <string name="jumlah_soal">Jumlah Soal :</string>
    <string name="start">Start</string>
    <string name="jam">Jam</string>
    <string name="tanggal">Tanggal</string>
    <string name="tambah_pertanyaan">Tambah Pertanyaan</string>
    <string name="name">Nama</string>
    <string name="log_out">Log Out</string>
    <string name="start_question">Kerjakan Soal</string>
    <string name="finish">Selesai</string>
    <string name="periksa_soal">Periksa Soal</string>
    <string name="nilai">Nilai</string>
    <string name="simpan">simpan</string>
    <string name="character">Character</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="school">MAN 2 Kab. Bima</string>
    <string name="online_learning">Online Learning</string>
    <string name="welcome">Welcome</string>
    <string name="click_here">Klik Disini</string>
    <string name="logo">Logo</string>
    <string name="description">Deskripsi</string>

    <string name="class_list">Daftar Kelas</string>
    <string name="lets_study">Ayo Belajar!</string>
    <string name="class_">Kelas</string>
    <string name="your_class">Kelas Anda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_to_class">Gabung Ke Kelas</string>
    <string name="class_code">Kode Kelas</string>
    <string name="create_class">Buat Kelas</string>
    <string name="join">Gabung</string>
    <string name="class_name">Nama Kelas</string>
    <string name="kode_kelas">Kode Kelas</string>
    <string name="dedline">Dedline:</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="daftar_pertanyaan">Daftar Soal</string>
    <string name="daftar_siswa">Daftar Siswa</string>
    <string name="tema">Tema</string>
</resources>
