<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/home_menu_lct"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/student_menu_lct"
        android:icon="@drawable/ic_supervisor_account_black_24dp"
        android:title="@string/student" />
    <item
        android:id="@+id/question_menu_lct"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/question" />
    <group />
    <item
        android:id="@+id/profile_menu_lct"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />
    <group />
</menu>