<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <TextView
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buat_soal"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textAlignment="center"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul"/>
        <EditText
            android:id="@+id/name_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mulai"/>
        <EditText
            android:id="@+id/start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selesai"/>
        <EditText
            android:id="@+id/finish_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:layout_marginBottom="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soal"
                android:layout_marginRight="20dp"/>
            <ImageButton
                android:id="@+id/add_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:src="@drawable/ic_add_black_24dp"/>
        </LinearLayout>
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/ly_soal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="60dp">

                </LinearLayout>
            </ScrollView>
            <Button
                android:id="@+id/create_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="@string/buat"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:layout_marginTop="30dp"/>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</LinearLayout>