<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BuatKelasActivity">

    <View
        android:id="@+id/view2"
        android:background="@drawable/background4"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="191dp"
        android:layout_height="149dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:srcCompat="@drawable/character2"
        android:contentDescription="@string/character" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="81dp"
        android:layout_height="88dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_kemenag"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3">

        <TextView
            android:textSize="33sp"
            android:textColor="#016316"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/school"
            android:fontFamily="@font/rakkas"
            android:layout_marginStart="8dp"/>

        <TextView
            android:textSize="15sp"
            android:textColor="#016316"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_learning"
            android:fontFamily="@font/playball"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <TextView
        android:textSize="30sp"
        android:textColor="#016316"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/create_class"
        android:fontFamily="@font/playball"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/rakkas"
        android:text="@string/class_code"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <EditText
        android:id="@+id/edt_class_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:fontFamily="@font/rakkas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rakkas"
        android:text="@string/class_name"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_class_code" />

    <EditText
        android:id="@+id/edt_class_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:fontFamily="@font/rakkas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rakkas"
        android:text="@string/description"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_class_name" />

    <EditText
        android:id="@+id/edt_description_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textMultiLine"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/rakkas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/btn_add_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/rakkas"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:text="@string/create_class"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_description_class" />

</androidx.constraintlayout.widget.ConstraintLayout>