<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp">

    <View
        android:id="@+id/view2"
        android:background="@drawable/background4"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="191dp"
        android:layout_height="149dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:srcCompat="@drawable/character2"
        android:contentDescription="@string/character" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="81dp"
        android:layout_height="88dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_kemenag"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3">

        <TextView
            android:textSize="33sp"
            android:textColor="#016316"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/school"
            android:fontFamily="@font/rakkas"
            android:layout_marginStart="8dp"/>

        <TextView
            android:textSize="15sp"
            android:textColor="#016316"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_learning"
            android:fontFamily="@font/playball"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <TextView
        android:textSize="30sp"
        android:textColor="#016316"
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/your_class"
        android:fontFamily="@font/playball"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"/>

    <ProgressBar
        android:id="@+id/pg_list_class"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_class_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/item_row_class" />


</androidx.constraintlayout.widget.ConstraintLayout>
