<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GabungKelasActivity">

    <LinearLayout
        android:id="@+id/view2"
        android:background="@drawable/background4"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="5dp"
        android:orientation="horizontal" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:layout_width="191dp"
                android:layout_height="149dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/character2"
                android:contentDescription="@string/character" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="81dp"
                android:layout_height="88dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/logo"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_kemenag"/>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3">

                <TextView
                    android:textSize="33sp"
                    android:textColor="#016316"
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/school"
                    android:fontFamily="@font/rakkas"
                    android:layout_marginStart="8dp"/>

                <TextView
                    android:textSize="15sp"
                    android:textColor="#016316"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/online_learning"
                    android:fontFamily="@font/playball"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

            <TextView
                android:textSize="30sp"
                android:textColor="#016316"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/join_to_class"
                android:fontFamily="@font/playball"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/class_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background5"
        android:drawableStart="@drawable/ic_search_black_24dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/rakkas"
        android:hint="@string/class_code"
        android:importantForAutofill="no"
        android:imeOptions="actionSearch|flagNoExtractUi"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="#016316"
        android:textColorHint="#80016316"
        android:textSize="15sp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <ProgressBar
        android:id="@+id/pg_list_class"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_class_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="270dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_code"
        tools:listitem="@layout/item_row_class_search" />

</androidx.constraintlayout.widget.ConstraintLayout>