<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartQuestion">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <TextView
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_question"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textAlignment="center"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:id="@+id/tv_judul_soal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:textSize="18dp"/>
            <LinearLayout
                android:id="@+id/ly_soal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
            <Button
                android:id="@+id/btn_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>